--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <div class="main__banner-content">
                     <h1 class="main__banner-text">Закупаем</h1>
                     <div class="banner__description">
-                        <div class="banner__description--first">Макулатуру: картон, бумага, архив, книги, бумажную упаковку и др.</div>
-                        <div class="banner__description--first">Отходы полиэтилена, канистры пластиковые, стретч пленка, ПВД пленка, ПНД пленка и др.</div>
-                        <div class="banner__description--first">в Смоленске у организаций и физических лиц</div>
+                        <div class="banner__description--first">Макулатуру: картон, бумага, архив, книги, бумажная упаковка и др.</div>
+                        <div class="banner__description--first">Отходы полимеров: ПЭТ бутылки, канистры пластиковые, стретч пленка, ПВД пленка, ПНД пленка и др.</div>
+                        <div class="banner__description--first">Металлолом</div>
                     </div>
                     <div class="main__banner-button-wrapper">
-                        <a href="#" class="main__banner-button button back__call-button">
+                        <a href="tel:89107889053" class="main__banner-button button back__call-button">
                             Подробнее
                         </a>
                         <!-- <div class="main__banner-catalog">
@@ -114,7 +114,7 @@
                                 от 330 р./т
                             </div> -->
                         </div>
-                        <a href="#" class="availability__product-link button back__call-button">Подробнее</a>
+                        <a href="tel:89107889053" class="availability__product-link button back__call-button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.2s">
                         <img src="img/content/product-1.jpg" alt="Стекло" class="availability__product-img">
@@ -127,7 +127,7 @@
                                 от 330 р./т
                             </div> -->
                         </div>
-                        <a href="#" class="availability__product-link button back__call-button">Подробнее</a>
+                        <a href="tel:89107889053" class="availability__product-link button back__call-button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.3s">
                         <img src="img/content/product-2.jpg" alt="Металлолом" class="availability__product-img">
@@ -140,7 +140,7 @@
                                 от 330 р./т
                             </div> -->
                         </div>
-                        <a href="#" class="availability__product-link button back__call-button">Подробнее</a>
+                        <a href="tel:89107889053" class="availability__product-link button back__call-button">Подробнее</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <h2 class="advanatages__header section__title">Сотрудничество</h2>
                     <h3>В наших силах сделать мир экологичнее и сохранить его красоту для будущих поколений!</h3>
                     <p>приглашаем региональных партнеров к выгодному сотрудничеству</p>
-                    <a href="#" class="cooperation__link button back__call-button">Подробнее</a>
+                    <a href="tel:89107889053" class="cooperation__link button back__call-button">Подробнее</a>
                 </div>
             </div>
         </section>
@@ -243,7 +243,7 @@
                             <img src="img/logos/logo-white.png" alt="логотип">
                         </div>
                         <div class="copyright">
-                            &copy; 2020 ВТОРСТ
+                            &copy; 2016 ООО "ВТОР-С.Т."
                         </div>
                     </div>
                     <div class="footer__right">
